--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe finder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="./js/script.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <div>
+                <h1>Recipe finder</h1>
+            </div>
+        </di>
+        <img
+            src="https://upload.wikimedia.org/wikipedia/en/thumb/e/ef/Coastal_Carolina_Chanticleers_logo.svg/1200px-Coastal_Carolina_Chanticleers_logo.svg.png"
+            height="130"
+            alt="War Chicken"
+        />
+    </div>
+    <div class="flex">
+        <form class="flex" id="submit">
+            <input type="text" id="search" placeholder="Search by category, meal or main ingredient">
+            <button class="search-btn" type="submit">
+            <i class="fas fa-search"></i>
+            </button>
+        </form>
+        <button class="random-btn" id="random">
+            <i class="fas fa-random"></i>
+        </button>
+    </div>
+    <div id="result-heading"></div>
+    <div class="meals" id="meals"></div>
+    <div id="single-meal"></div>
+    </div>
+    
    
     
 </body>
