adds image and footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <div class="meals" id="meals"></div>
     <div id="single-meal"></div>
     </div>
-    
+    <footer>
+        <p>&copy; 2020 Recipe finder</p>
+    </footer>
    
     
 </body>
